--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^26.0.20",
     "clean-webpack-plugin": "^3.0.0",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.0",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
     "webpack": "^5.12.3",
